--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@apollo/client": "^3.7.1",
     "@graphcms/rich-text-react-renderer": "^0.6.1",
     "@headlessui/react": "^1.7.4",
-    "@heroicons/react": "v1",
+    "@heroicons/react": "^2.0.16",
     "@next/font": "^13.0.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.9",
@@ -21,6 +21,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-transition-group": "^4.4.5",
+    "clsx": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "graphql": "^16.6.0",
